--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "modulo9-gobarber-web",
-  "version": "0.1.0",
+  "name": "gobarber-web",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@rocketseat/unform": "^1.6.1",
     "axios": "^0.19.0",
